# pattern-scan

./: Cargo.toml
injector/: Cargo.toml
injector/src/: main.rs  process.rs  steam.rs
td/: Cargo.toml
td/src/: lib.rs  memory.rs  signature.rs
