[package]
name = "td"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.17"
pretty_env_logger = "0.4.0"
chrono = "0.4.19"
libc = { version = "0.2.126", features = ["std"] }

[dependencies.winapi]
version = "0.3.9"
features = [
    "consoleapi",
    "memoryapi",
    "psapi",
]

[lib]
crate-type = ["cdylib"]

[profile.release]
optimization = "speed"
lto = true